prd/pickpro/pickpro-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickpro-front
  namespace: pickpro
  labels:
    app: pickpro-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pickpro-front
  template:
    metadata:
      labels:
        app: pickpro-front
        app.kubernetes.io/part-of: soludev-workload
    spec:
      tolerations:
        - key: "klipperlb-exclude"
          value: "true"
          effect: "NoSchedule"
          operator: "Equal"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: pickpro-front
          image: kaiohz/pickpro:pickpro-front-7371337d19d8110b32434e11877c816405b3027e
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "192Mi"
              cpu: "500m"
      volumes:
        - name: config-volume
          configMap:
            name: pickpro-front-config
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      imagePullSecrets:
        - name: pickpro-docker-secret
