prd/pickpro/pickpro-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pickpro-front-ingress
  namespace: pickpro
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
    traefik.ingress.kubernetes.io/router.middlewares: pickpro-security-headers@kubernetescrd
spec:
  rules:
    - host: app.pickpro.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-service
                port:
                  number: 4180
